--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-/*
-  Oh Hello!
-
-  These are some base styles so that our tutorial looks good.
-
-  Let's go through the important bits real quick
-*/
 :root {
   --yellow: #ffc600;
   --black: #272727;
@@ -22,31 +15,16 @@ html {
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
 }
 
-/*
-  WAT IS THIS?!
-  We inherit box-sizing: border-box; from our <html> selector
-  Apparently this is a bit better than applying box-sizing: border-box; directly to the * selector
-*/
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
 
-body {
-  background-image: url("./images/topography.svg"),
-    linear-gradient(110deg, #f93d66, #6d47d9);
-  background-size: 340px, auto;
-  min-height: calc(100vh - 100px);
-  margin: 50px;
-  background: white;
-  background-attachment: fixed;
-  letter-spacing: -1px;
-}
-
 .container {
   display: grid;
-  width: 90em;
+  grid-template-columns: 1fr 1fr;
+
 }
 
 about {
