--- a/style.css
+++ b/style.css
@@ -29,8 +29,9 @@ html {
 .work {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: 2em;
+  padding: 2em;
 }
-
 
 about {
   grid-row: 1 / 4;
