--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ html {
   /* border-box box model allows us to add padding and border to our elements without increasing their size */
   box-sizing: border-box;
   /* A system font stack so things load nice and quick! */
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 900;
-  font-size: 10px;
+  font-size: 10px; */
   color: var(--black);
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
 }
@@ -21,7 +21,20 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  margin: 0px;
+  padding: 0;
+}
+
 .container {
+  display: grid;
+  margin: auto;
+  width: 100vw;
+  height: 100vh;
+  grid-template-rows: auto 1fr auto
+}
+
+.main-content {
   display: grid;
   grid-template-columns: 1fr 3fr;
 }
