--- a/style.css
+++ b/style.css
@@ -7,10 +7,10 @@ html {
   /* border-box box model allows us to add padding and border to our elements without increasing their size */
   box-sizing: border-box;
   /* A system font stack so things load nice and quick! */
-  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 900;
-  font-size: 10px; */
+  font-size: 12px;
   color: var(--black);
   text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07);
 }
@@ -36,7 +36,9 @@ body {
 
 .main-content {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  width: 80vw;
+  margin: auto;
+  /* grid-template-columns: 1fr 3fr; */
 }
 
 .work {
@@ -60,8 +62,9 @@ body {
   justify-content: center;
 }
 
-about {
-  grid-row: 1 / 4;
+.about {
+  text-align: center;
+  display: grid;
 }
 
 img {
@@ -76,4 +79,77 @@ img {
   margin-right: 1em;
   -webkit-shape-outside:circle();
   shape-outside:circle();
+}
+
+.description, h3 {
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+.project-container {
+  display: grid;
+  justify-content: center;
+  justify-self: center;
+}
+
+.headshot {
+  width: 150px;
+  margin: auto;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  opacity: 0.5;
+
+}
+
+.main-pic-section {
+    display: grid;
+    grid-template-columns: auto 150px auto;
+}
+
+span {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  align-self: center;
+  font-size: 18px;
+}
+
+/* .name span {
+  font: 26px Monaco, MonoSpace;
+  height: 50px;
+  position: static;
+  width: 20px;
+  left: 0;
+  top: 0;
+  transform-origin: center center;
+} */
+
+.char1 {
+  transform: rotate(-35deg) translate(0, -80px);
+}
+.char2 {
+  transform: rotate(-28deg) translate(0, -80px);
+}
+.char3 {
+  transform: rotate(-21deg) translate(0, -80px);
+}
+.char4 {
+  transform: rotate(-14deg) translate(0, -80px);
+}
+.char5 {
+  transform: rotate(-7deg) translate(0, -80px);
+}
+.char6 {
+  transform: rotate(7deg) translate(0, -80px);
+}
+.char7 {
+  transform: rotate(14deg) translate(0, -80px);
+}
+.char8 {
+  transform: rotate(21deg) translate(0, -80px);
+}
+.char9 {
+  transform: rotate(28deg) translate(0, -80px);
+}
+.char10 {
+  transform: rotate(35deg) translate(0, -80px);
 }
