--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   --black: #272727;
 }
 
+p {
+  margin: 0;
+}
+
 html {
   /* border-box box model allows us to add padding and border to our elements without increasing their size */
   box-sizing: border-box;
@@ -53,14 +57,6 @@ body {
   background: pink;
   overflow: hidden;
 }
-.work>div>h3 {
-  text-align: center;
-}
-
-.project-links {
-  display: block;
-  justify-content: center;
-}
 
 .about {
   text-align: center;
@@ -68,29 +64,38 @@ body {
 }
 
 img {
-  width: 9em;
+  /* width: 9em; */
   border-radius: 50%;
 }
 
 .thumbnail {
-  width: 50%;
-  overflow: hidden;
-  float: left;
-  margin-right: 1em;
+  width: 100px;
+  /* overflow: hidden; */
+  /* float: left; */
+  /* margin-right: 1em; */
   -webkit-shape-outside:circle();
-  shape-outside:circle();
+  shape-outside: circle();
+  float: left;
+  margin-right: 2rem;
 }
 
-.description, h3 {
+.project-title {
+  text-align: center;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+/* .description, h3 {
   margin-top: 5px;
   margin-bottom: 5px;
-}
+} */
 
-.project-container {
+/* .project-container {
+  text-align: center;
   display: grid;
   justify-content: center;
   justify-self: center;
-}
+} */
 
 .headshot {
   width: 150px;
@@ -102,6 +107,7 @@ img {
 }
 
 .main-pic-section {
+    margin: 20px;
     display: grid;
     grid-template-columns: auto 150px auto;
 }
@@ -124,57 +130,68 @@ span {
 } */
 
 .char1 {
-  transform: rotate(-35deg) translate(0, -85px);
+  transform: rotate(-39deg) translate(0, -85px);
 }
 .char2 {
-  transform: rotate(-28deg) translate(0, -85px);
+  transform: rotate(-30deg) translate(0, -85px);
 }
 .char3 {
   transform: rotate(-21deg) translate(0, -85px);
 }
 .char4 {
-  transform: rotate(-14deg) translate(0, -85px);
+  transform: rotate(-12deg) translate(0, -85px);
 }
 .char5 {
-  transform: rotate(-7deg) translate(0, -85px);
+  transform: rotate(-3deg) translate(0, -85px);
+}
+.char6 {
+  transform: rotate(12deg) translate(0, -85px);
 }
 .char7 {
-  transform: rotate(14deg) translate(0, -85px);
-}
-.char8 {
   transform: rotate(21deg) translate(0, -85px);
 }
-.char9 {
-  transform: rotate(28deg) translate(0, -85px);
+.char8 {
+  transform: rotate(30deg) translate(0, -85px);
 }
+.char9 {
+  transform: rotate(39deg) translate(0, -85px);
+}
+
+
 .char10 {
-  transform: rotate(35deg) translate(0, -85px);
+  transform: rotate(52deg) translate(0, 85px);
 }
 
 .char11 {
-  transform: rotate(-35deg) translate(0, -85px);
+  transform: rotate(43deg) translate(0, 85px);
 }
 .char12 {
-  transform: rotate(-28deg) translate(0, -85px);
+  transform: rotate(34deg) translate(0, 85px);
 }
 .char13 {
-  transform: rotate(-21deg) translate(0, -85px);
+  transform: rotate(20deg) translate(0, 85px);
 }
-.char4 {
-  transform: rotate(-14deg) translate(0, -85px);
+.char14 {
+  transform: rotate(11deg) translate(0, 85px);
 }
-.char5 {
-  transform: rotate(-7deg) translate(0, -85px);
+.char15 {
+  transform: rotate(2deg) translate(0, 85px);
 }
-.char7 {
-  transform: rotate(14deg) translate(0, -85px);
+.char16 {
+  transform: rotate(-7deg) translate(0, 85px);
 }
-.char8 {
-  transform: rotate(21deg) translate(0, -85px);
+.char17 {
+  transform: rotate(-16deg) translate(0, 85px);
 }
-.char9 {
-  transform: rotate(28deg) translate(0, -85px);
+.char18 {
+  transform: rotate(-25deg) translate(0, 85px);
 }
-.char10 {
-  transform: rotate(35deg) translate(0, -85px);
+.char19 {
+  transform: rotate(-34deg) translate(0, 85px);
+}
+.char20 {
+  transform: rotate(-43deg) translate(0, 85px);
+}
+.char21 {
+  transform: rotate(-52deg) translate(0, 85px);
 }
