--- a/style.css
+++ b/style.css
@@ -45,17 +45,46 @@ body {
   /* grid-template-columns: 1fr 3fr; */
 }
 
+.personal-statement {
+  margin: 20px 0 20px 0;
+}
 .work {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-auto-rows: min-content;
-  grid-gap: 2em;
-  padding: 2em;
+  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
+  grid-gap: 5px;
+  justify-items: center;
+  grid-gap: 10px;
+  /* grid-template-columns: repeat(4, minmax(200px, 1fr)); */
+  /* grid-auto-flow: column; */
+
+  /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
+  /* grid-auto-rows: min-content; */
+  /* grid-gap: 5px; */
+  /* padding: 2em; */
+}
+
+@media(max-width:900px){
+  .main-content {
+    width: 90vw;
+  }
+  .work {
+     grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media(max-width:650px){
+  .work {
+     grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media(max-width:430px){
+  .work {
+    grid-template-columns: 1fr;
+  }
 }
 
 .work>div {
-  background: pink;
-  overflow: hidden;
+  width: 200px;
 }
 
 .about {
@@ -69,7 +98,7 @@ img {
 }
 
 .thumbnail {
-  width: 100px;
+  width: 75px;
   /* overflow: hidden; */
   /* float: left; */
   /* margin-right: 1em; */
@@ -96,14 +125,15 @@ img {
   justify-content: center;
   justify-self: center;
 } */
-
+.icon {
+  border-radius: 0;
+  width: 10px;
+}
 .headshot {
   width: 150px;
   margin: auto;
   grid-column: 2 / 3;
   grid-row: 1 / 2;
-  opacity: 0.5;
-
 }
 
 .main-pic-section {
@@ -159,7 +189,7 @@ span {
 
 
 .char10 {
-  transform: rotate(52deg) translate(0, 85px);
+  transform: rotate(53deg) translate(0, 85px);
 }
 
 .char11 {
