--- a/style.css
+++ b/style.css
@@ -49,15 +49,19 @@ body {
   /* grid-template-columns: 1fr 3fr; */
 }
 .work {
+  width: 80vw;
+  margin: auto;
   display: grid;
-  background: peachpuff;
+  /* background: peachpuff; */
   grid-template-columns: repeat(4, 1fr);
   /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
   grid-gap: 5px;
+  align-content: start;
   justify-items: center;
   grid-gap: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
+  height: 100%;
   /* grid-template-columns: repeat(4, minmax(200px, 1fr)); */
   /* grid-auto-flow: column; */
 
@@ -116,14 +120,13 @@ img {
 
 .project-title {
   text-align: center;
-  font-size: 14px;
+  font-size: 13px;
   margin-bottom: 10px;
 }
 
-/* .description, h3 {
-  margin-top: 5px;
-  margin-bottom: 5px;
-} */
+.description {
+ font-size: 11px;
+}
 
 /* .project-container {
   text-align: center;
