--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ body {
   width: 100vw;
   height: 100vh;
   display: grid;
-  grid-template-rows: auto auto;
+  /* grid-template-rows: 1fr; */
+  grid-template-rows: 1fr auto auto 1fr;
 }
 
 .about>p {
@@ -56,12 +57,13 @@ body {
   grid-template-columns: repeat(4, 1fr);
   /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
   grid-gap: 5px;
-  align-content: start;
+  align-items: start;
   justify-items: center;
   grid-gap: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
   height: 100%;
+  grid-row-start: 3;
   /* grid-template-columns: repeat(4, minmax(200px, 1fr)); */
   /* grid-auto-flow: column; */
 
@@ -96,13 +98,14 @@ body {
 
 .about {
   text-align: center;
-  display: flex;
+  grid-row-start: 2;
+  /* display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: flex-end; */
 }
 
 
-img {
+.rounded {
   /* width: 9em; */
   border-radius: 50%;
 }
@@ -124,8 +127,10 @@ img {
   margin-bottom: 10px;
 }
 
+
 .description {
- font-size: 11px;
+  font-size: 11px;
+  margin-bottom: 10px;
 }
 
 /* .project-container {
@@ -135,14 +140,26 @@ img {
   justify-self: center;
 } */
 .icons {
+  z-index: -1;
+  /* display: inline-block; */
   display: flex;
   justify-content: center;
 }
 .icons>a {
-  z-index: 20;
+  /* display: inline-block; */
+  z-index: 30;
+  margin: 0px 1px 0px 1px;
+}
+.clickable {
+  z-index: 50;
 }
 .icon {
-  width: 30px;
+  width: 25px;
+  border-radius: 0;
+}
+
+.project-links>a>.icon {
+  width: 20px;
 }
 
 .headshot {
@@ -153,7 +170,7 @@ img {
 }
 
 .main-pic-section {
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 20px;
     display: grid;
     grid-template-columns: auto 150px auto;
