--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
   /* grid-template-columns: 1fr 3fr; */
 }
 .work {
+  background: none;
   width: 80vw;
   margin: auto;
   display: grid;
