--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .about>p {
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 .main-content {
   display: grid;
@@ -51,7 +51,7 @@ body {
   /* grid-template-columns: 1fr 3fr; */
 }
 .work {
-  background: none;
+  overflow: visible;
   /* width: 80vw; */
   margin: auto;
   display: grid;
@@ -147,6 +147,7 @@ body {
   /* display: inline-block; */
   display: flex;
   justify-content: center;
+  margin: 30px 0 10px 0;
 }
 .icons>a {
   /* display: inline-block; */
