--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
-  --yellow: #ffc600;
-  --black: #272727;
+  --yellow: hsl(47, 48%, 72%);
+  --dark1: hsl(267, 100%, 7%);
+  --dark2: hsl(267, 70%, 20%);
 }
 
 p {
@@ -13,9 +14,9 @@ html {
   /* A system font stack so things load nice and quick! */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-weight: 600;
+  font-weight: 500;
   font-size: 12px;
-  color: var(--black);
+  color: hsl(221, 95%, 20%);
   /* text-shadow: 0 2px 0 rgba(0, 0, 0, 0.07); */
 }
 
@@ -28,57 +29,60 @@ html {
 body {
   margin: 0px;
   padding: 0;
-  text-align: center;
 }
 
 .container {
-  /* display: grid; */
-  margin: auto;
-  width: 80vw;
-  height: 100vh;
-  display: grid;
-  /* grid-template-rows: 1fr; */
-  grid-template-rows: 1fr auto auto 1fr;
+  display: flex;
+  min-block-size: 100vh;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: center;
+  min-inline-size: 200px;
+}
+
+.about {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  min-width: 100%;
+  text-align: center;
+  background: none;
+  background-color:#4c72c2;
+  color: white;
+}
+
+.name .title {
+  font-weight: 700;
 }
 
 .about>p {
-  margin-bottom: 10px;
+  margin: 5px 0;
 }
 .main-content {
   display: grid;
   width: 80vw;
   margin: auto;
-  /* grid-template-columns: 1fr 3fr; */
 }
-.work {
-  overflow: visible;
-  /* width: 80vw; */
-  margin: auto;
-  display: grid;
-  /* background: peachpuff; */
-  grid-template-columns: repeat(4, minmax(200px, 1fr));
-  /* grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); */
-  grid-gap: 5px;
-  align-items: start;
-  justify-items: center;
-  grid-gap: 10px;
-  /* padding-top: 20px; */
-  padding-bottom: 20px;
-  height: 100%;
-  grid-row-start: 3;
-  /* grid-template-columns: repeat(4, minmax(200px, 1fr)); */
-  /* grid-auto-flow: column; */
 
-  /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
-  /* grid-auto-rows: min-content; */
-  /* grid-gap: 5px; */
-  /* padding: 2em; */
+.work {
+  min-width: 100%;
+  /* max-inline-size: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; */
+}
+
+.project-section {
+  margin: auto;
+  max-inline-size: 800px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .project-links {
   visibility: hidden;
 }
-
 .project-container:hover > .project-links{
   visibility: visible;
 }
@@ -87,39 +91,25 @@ body {
   width: 20px;
 }
 
-.work>div {
-  width: 200px;
+.project-container {
+  inline-size: 200px;
   padding: 20px;
-}
-
-.about {
-  text-align: center;
-  grid-row-start: 2;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: flex-end; */
 }
 
 
 .rounded {
-  /* width: 9em; */
   border-radius: 50%;
 }
 
 .thumbnail {
   width: 75px;
-  /* overflow: hidden; */
-  /* float: left; */
-  /* margin-right: 1em; */
   -webkit-shape-outside:circle();
   shape-outside: circle();
   float: left;
   margin: 0 20px 0 0;
+  border: solid 1px white;
 }
-.big-right {
-  float: right;
-  margin: 0 0 0 20px;
-}
+
 
 .project-title {
   text-align: center;
@@ -133,21 +123,13 @@ body {
   margin-bottom: 10px;
 }
 
-.project-container {
-  width: 200px;
-}
-/* .project-container {
-  text-align: center;
-  display: grid;
-  justify-content: center;
-  justify-self: center;
-} */
 .icons {
-  z-index: -1;
+  /* z-index: -1; */
   /* display: inline-block; */
   display: flex;
   justify-content: center;
-  margin: 30px 0 10px 0;
+  margin: 5px 0;
+  /* margin: 30px 0 10px 0; */
 }
 .icons>a {
   /* display: inline-block; */
@@ -161,9 +143,8 @@ body {
   width: 25px;
   border-radius: 0;
 }
-
-.cv {
-  
+.icon-heading {
+  fill: white;
 }
 
 .headshot {
@@ -181,26 +162,9 @@ body {
 }
 
 .personal-statement {
-  padding: 0 25px;
+  padding: 0 25px 15px 0;
 }
-
-span {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-  align-self: center;
-  font-size: 18px;
-}
-
-/* .name span {
-  font: 26px Monaco, MonoSpace;
-  height: 50px;
-  position: static;
-  width: 20px;
-  left: 0;
-  top: 0;
-  transform-origin: center center;
-} */
-
+/* 
 @media(max-width:920px){
   .main-content {
     width: 90vw;
@@ -266,6 +230,13 @@ span {
     margin: 0 20px 0 0;
   }
 
+} */
+
+span {
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  align-self: center;
+  font-size: 18px;
 }
 
 .char1 {
@@ -333,4 +304,61 @@ span {
 }
 .char21 {
   transform: rotate(-52deg) translate(0, 85px);
+}
+
+.waveHorizontals{
+	width: 100vw;
+	height: 20px;
+	position:relative;
+	overflow:hidden;
+	z-index:1;
+}
+.waveHorizontal{
+	width: 200%;
+	height: 100%;
+	display: block;
+	position:absolute;
+	left:0; bottom:0;
+	background-repeat:repeat-x;
+	background-position:left bottom;
+	background-size:350px 100%;
+	transform-origin:0 0% 0;
+	
+	/* animation: move linear infinite; */
+	animation-name:move;
+	animation-timing-function:linear;
+  animation-iteration-count:infinite;
+}
+
+#waveHorizontal1{
+	background-image:url(./assets/images/wave-1.svg);
+	animation-delay: -2s;
+	animation-duration: 12s;	
+}
+#waveHorizontal2{
+	background-image:url(./assets/images/wave-2.svg);
+	animation-delay: -2s;
+	animation-duration: 5s;	
+}
+#waveHorizontal3{
+	background-image:url(./assets/images/wave-3.svg);
+	animation-delay: -1s;
+	animation-duration: 3s;
+}
+@keyframes move{
+	0% {		transform: translate(-175px,0px) scale(1,1);}
+	50% {		transform: translate(-87px,0px) scale(1,0.5);}
+	100% {	transform: translate(0px,0px) scale(1,1);}
+}
+.content{
+	height:300px;
+	position:relative;
+	background-color:hsl(221, 49%, 53%);
+	/* iOS safariで隙間が空くことへの対応 */
+	margin:-1px 0;	
+	z-index:2;
+}
+
+dude {
+  color: hsla(221, 58%, 42%, 0.5);
 }
