--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
   box-sizing: border-box;
   /* A system font stack so things load nice and quick! */
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-weight: 450;
   font-size: 12px;
   color: hsl(221, 95%, 20%);
@@ -59,10 +59,31 @@ body {
   margin: 5px 0;
 }
 
+.icon-heading {
+  fill: hsl(300, 9%, 91%);
+}
+
+.headshot {
+  width: 150px;
+  margin: auto;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+}
+
+.main-pic-section {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    display: grid;
+    grid-template-columns: auto 150px auto;
+}
+
+.personal-statement {
+  padding: 0 25px 15px 0;
+}
+
 .work {
   min-width: 100%;
 }
-
 
 .project-section {
   margin: auto;
@@ -131,31 +152,12 @@ body {
 .clickable {
   z-index: 50;
 }
+
 .icon {
   width: 25px;
   border-radius: 0;
 }
-.icon-heading {
-  fill: hsl(300, 9%, 91%);
-}
 
-.headshot {
-  width: 150px;
-  margin: auto;
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-}
-
-.main-pic-section {
-    margin-top: 25px;
-    margin-bottom: 25px;
-    display: grid;
-    grid-template-columns: auto 150px auto;
-}
-
-.personal-statement {
-  padding: 0 25px 15px 0;
-}
 /* 
 @media(max-width:920px){
   .main-content {
@@ -193,27 +195,27 @@ body {
     margin: 0 20px 0 0;
   }
 }
-
-@media(max-width:460px){
-  .container {
+*/
+@media(max-width:400px){
+  /* .container {
     width: 100vw;
-  }
+  } */
   .project-links {
     visibility: visible;
   }
-  .work {
+  /* .work {
     grid-template-columns: 1fr;
     width: 80%;
-  }
-  .project-container:nth-child(even) {
+  } */
+  /* .project-container:nth-child(even) {
     justify-self: start;
     margin-left: 20px;
   }
   .project-container:nth-child(odd) {
     justify-self: end;
     margin-right: 20px;
-  }
-  .small-right {
+  } */
+  .xs-right {
     float: right;
     margin: 0 0 0 20px;
   }
@@ -221,8 +223,10 @@ body {
     float: left;
     margin: 0 20px 0 0;
   }
-
-} */
+  .xs-text-right {
+    text-align: right;
+  }
+}
 
 span {
   grid-column: 2 / 3;
