--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ body {
   }
 }
 */
-@media(max-width:400px){
+@media(max-width:415px){
   /* .container {
     width: 100vw;
   } */
@@ -217,6 +217,9 @@ body {
     justify-self: end;
     margin-right: 20px;
   } */
+  .project-section {
+    width: 399px;
+  }
   .xs-right {
     float: right;
     margin: 0 0 0 20px;
