--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body {
 .project-container {
   flex-grow: 0;
   flex-shrink: 0;
-  flex-basis: 200px;
+  flex-basis: 200px auto;
   min-inline-size: 200px;
   max-inline-size: 200px;
   inline-size: 200px;
@@ -224,8 +224,8 @@ body {
     margin: auto;
   }
   .project-section {
-    flex-direction: column;
-    justify-content: center;
+    /* flex-direction: column; */
+    /* justify-content: center; */
   }
   .xs-right {
     float: right;
