--- a/style.css
+++ b/style.css
@@ -99,6 +99,9 @@ body {
   flex-basis: 200px auto;
   min-inline-size: 200px;
   max-inline-size: 200px;
+  width: 200px;
+  max-width: 200px;
+  min-width: 200px;
   inline-size: 200px;
   padding: 15px;
 }
