idk if this will work

--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ body {
   }
 }
 */
-@media(max-width:399px){
+@media(max-width:415px){
   /* .container {
     width: 100vw;
   } */
@@ -229,6 +229,7 @@ body {
   .project-section {
     /* flex-direction: column;
     justify-content: center; */
+    width: 399px;
   }
   .xs-right {
     float: right;
