--- a/style.css
+++ b/style.css
@@ -129,8 +129,12 @@ body {
   float: left;
   margin: 0 20px 0 0;
   border: solid 2px var(--mainBlue);
+  box-shadow: 0 1px 5px rgba(0,0,0,0.12), 0 1px 4px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
-
+.thumbnail:hover{
+  box-shadow: 0 7px 14px rgba(0,0,0,0.25), 0 5px 10px rgba(0,0,0,0.22);
+}
 
 .project-title {
   text-align: center;
@@ -231,6 +235,9 @@ body {
   }
   .xs-text-right {
     text-align: right;
+  }
+  .xs-text-left {
+    text-align: left;
   }
 }
 
