--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ body {
   /* margin: 20px; */
   padding: 7px 30px;
  }
- .hi:before {
+ /* .hi:before {
   content: '';
   position: absolute;
   background: radial-gradient(circle at bottom left, #f95253 0%, #fd992d 50%);  
@@ -84,8 +84,25 @@ body {
   z-index: -1;
   transform: translateX(-20px);
   overflow: auto;
- }
+ } */
+.hi-orange {
+  background: radial-gradient(circle at bottom left, #f95253 0%, #fd992d 50%);  
+  padding: 10px 5px 10px 20px;
+  margin-right: 7px;
+}
+.name {
 
+}
+/* .hi-orange:before {
+  content: '';
+  position: absolute;
+  background: blue;
+  color: blue;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+} */
 .headshot {
   width: 150px;
   grid-row: 1 / -1;
