formatting extras section

--- a/style.css
+++ b/style.css
@@ -294,10 +294,14 @@ body {
   flex-wrap: wrap;
   max-width: 800px;
   margin: auto;
+  min-width: 200px;
+  justify-content: center;
 }
 
 .extras-section {
-  border: solid 1px blue;
+  /* border: solid 1px blue; */
+  /* max-width: 200px; */
+  margin: 20px;
 }
 .footer-container {
   overflow: hidden;
@@ -350,6 +354,7 @@ body {
   text-align: left;
 }
 .hit-me-up {
+  text-align: center;
   background: radial-gradient(circle at bottom left, #f95253 0%, #fd992d 50%);  
   color: hsl(277, 53%, 42%);
   font-size: 1.25rem;
@@ -357,7 +362,7 @@ body {
   text-shadow: -1.5px 1.5px 0px #fd992d, -3px 3px 0px #fff;
   padding: 10px 15px;
   margin-right: 15px;
-  transform: translateY(13px) rotate(-13deg);
+  transform: translateY(15px) rotate(-13deg);
 }
 
 @media(max-width:799px){
