--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ body {
   filter: drop-shadow(0 1px .5px hsla(277, 100%, 15%, .3));
 }
 .work {
-  width: 100%;
+  width: 100vw;
   min-width: 270px;
   background: radial-gradient(circle at top left, hsl(330, 78%, 65%) 0%, hsl(277, 68%, 67%) 50%);
   display: block;
