--- a/style.css
+++ b/style.css
@@ -322,6 +322,14 @@ body {
   background-position: bottom;
 }
 
+.tde-logo {
+  width: 125px;
+  float: left;
+  margin-right: 15px;
+  margin-left: 0px;
+  shape-outside: polygon(35.95% 11.47%, 46.78% 8.35%, 55.57% 8.72%, 64.22% 12.08%, 72.47% 18.56%, 79.5% 28.7%, 81.76% 41.93%, 80.59% 54.09%, 74.28% 66.29%, 80.35% 74.16%, 88.35% 78.95%, 93.20% 82.07%, 92.6% 94.76%, 7.92% 95.45%, 6.18% 83.24%, 17.41% 83.17%, 17.67% 73.14%, 25% 65.19%, 19.31% 54.99%, 17.17% 41.3%, 21.12% 27.18%, 27.05% 18.06%);
+}
+
 .footer-container {
   overflow: hidden;
   /* height: 225px; */
