--- a/style.css
+++ b/style.css
@@ -21,12 +21,16 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
+  scrollbar-width: none;
+
 }
 
 body {
   margin: 0px;
   padding: 0;
   min-width:270px;
+  scrollbar-width: none;
+
 }
 
 .container {
@@ -292,7 +296,7 @@ body {
   padding-top: 25px;
   display: flex;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 600px;
   margin: auto;
   min-width: 200px;
   justify-content: center;
@@ -388,6 +392,12 @@ body {
   text-align: left;
   margin: 20px;
 }
+.always-looking {
+  max-width: 600px;
+  /* margin: auto; */
+  display: inline-block;
+  margin: 20px;
+}
 .hit-me-up {
   text-align: center;
   background: radial-gradient(circle at bottom left, #f95253 0%, #fd992d 50%);  
@@ -416,7 +426,7 @@ body {
     text-align: left;
   }
   .statement {
-    width: 100vw;
+    /* width: 100vw; */
   }
 }
 
@@ -436,7 +446,7 @@ body {
     text-align: left;
   }
   .statement {
-    width: 100vw;
+    width: 400px;
   }
 
 }
@@ -448,7 +458,7 @@ body {
   }
   .project-section {
     max-width: 399px;
-    padding: 0 60px;
+    padding: 0 50px;
   }
   .project-container:nth-child(odd) {
     margin-right: auto;
@@ -471,7 +481,8 @@ body {
     text-align: left;
   }
   .statement {
-    width: 100vw;
+    margin: 0 -35px;
+    margin-top: 10px;
   }
 
 }
