--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ body {
   float: left;
   margin-right: 15px;
   margin-left: 0px;
-  shape-outside: polygon(35.95% 11.47%, 46.78% 8.35%, 55.57% 8.72%, 64.22% 12.08%, 72.47% 18.56%, 79.5% 28.7%, 81.76% 41.93%, 80.59% 54.09%, 74.28% 66.29%, 80.35% 74.16%, 88.35% 78.95%, 93.20% 82.07%, 92.6% 94.76%, 7.92% 95.45%, 6.18% 83.24%, 17.41% 83.17%, 17.67% 73.14%, 25% 65.19%, 19.31% 54.99%, 17.17% 41.3%, 21.12% 27.18%, 27.05% 18.06%);
+  shape-outside: polygon(35.15% 3.32%, 49.18% -0.71%, 65.97% 3.29%, 73.79% 10.27%, 84.01% 31.23%, 82.5% 49.53%, 79.08% 69.91%, 78.09% 78.69%, 78.86% 84.79%, 93.03% 89.9%, 93.74% 101.39%, -1.02% 100.45%, -0.99% 90.42%, 12.87% 89.44%, 13% 77.87%, 20.11% 68.58%, 13.17% 52.17%, 13.92% 30.8%, 23.05% 12.63%);
 }
 
 .footer-container {
@@ -409,6 +409,11 @@ body {
   padding: 10px 15px;
   margin-right: 15px;
   transform: translateY(15px) rotate(-13deg);
+}
+
+.space {
+  content: '';
+  line-height: 20px;
 }
 
 @media(max-width:799px){
